test/error/iface/err4.rzy

Sub = Elementary
  funcA : signal();
  funcB : signal();
end

Err4 = Composition
  funcA : signal();
  funcB : signal();
  funcC : signal();
    
  a : Sub;

  a.funcA -> funcA;
  a.funcB -> funcB;
  a.funcC -> funcC;
end

